Lesson fourth completed

--- a/index.html
+++ b/index.html
@@ -18,4 +18,5 @@
 </body>
 <script src="script.js"></script>
 <!-- <script src="hamburger.js"></script> -->
+<!-- <script src="index.js"></script> -->
 </html>
