--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="search-line">
                     <input v-model="searchLine" class="search-line-item" type="text" />
-                    <button class="search-line-item menu-button">Search</button>
+                    <!-- <button class="search-line-item menu-button">Search</button> -->
                 </div>
                 <button @click="isVisibleCart = true" class="basket-button menu-button" type="button">Basket</button>
                     <Teleport to="body">
@@ -32,11 +32,7 @@
                 {{ searchLine }}
             </p>
             <div v-if="filteredProducts.length > 0" class="products-list container-content">
-                <div class="products-item" v-for="product in filteredProducts">
-                    <img class=product-image></img>
-                    <h4>{{ product.product_name }}</h4>
-                    <p>{{ product.price }}</p>
-                </div>
+                <products-component :products="filteredProducts"></products-component>
             </div>
             <div v-else class="container-content plug-text">
                 <h4>
@@ -46,6 +42,4 @@
         </main>
     </body>
 </div>
-
-
 </html>
