--- a/index.html
+++ b/index.html
@@ -14,17 +14,8 @@
     <body>
         <header class="header">
             <div class="container">
-                <div class="search-line">
-                    <input v-model="searchLine" class="search-line-item" type="text" />
-                    <!-- <button class="search-line-item menu-button">Search</button> -->
-                </div>
-                <button @click="isVisibleCart = true" class="basket-button menu-button" type="button">Basket</button>
-                    <Teleport to="body">
-                        <div v-if="isVisibleCart" class="basket">
-                            <p class="header-basket">Basket</p>
-                            <button @click="isVisibleCart = false" class="basket-close-button">Close</button>
-                        </div>
-                    </Teleport>
+                <search-component v-model="searchLine"></search-component>
+                <button-basket-component @change-visible-basket="changeVisibleBasket">Basket</button-basket-component>
             </div>
         </header>
         <main>
@@ -40,6 +31,7 @@
                 </h4>
             </div>
         </main>
+        <basket-component :visible-basket="isVisibleCart" @change-visible-basket="changeVisibleBasket"></basket-component>
     </body>
 </div>
 </html>
